--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,67 @@
 /*  your css code here. If applicable */
+body {
+  background-color: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.left {
+  width: 450px;
+  margin-top: 70px;
+  display: inline-block;
+}
+
+.right {
+  width: 300px;
+}
+
+form {
+  display: flex;
+  width: 300px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #ccc;
+  flex-direction: column;
+  gap: 10px;
+}
+
+input {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+button {
+  background-color: #1877f2;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: 100%;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.signup {
+  background-color: #42b72a;
+  border-radius: 5px;
+  padding: 10px 20px;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #1877f2;
+}
